--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "figma": "https://www.figma.com/design/6xzQJfnNyHMfxZE4Gigpu9/%D0%92%D0%A4?node-id=3-2&t=qEsGw69pmyLCkFim-0",
-
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,9 +10,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
+    "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
+    "mongoose": "^8.4.1",
     "next": "14.2.3",
+    "next-cloudinary": "^6.6.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
+    "react-i18next": "^14.1.2",
+    "swr": "^2.2.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
