--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "i18next-http-backend": "^2.5.2",
     "mongoose": "^8.4.1",
     "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.3",
     "next-cloudinary": "^6.6.2",
     "react": "^18",
     "react-dom": "^18",
