--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-i18next": "^14.1.2",
+    "swiper": "^11.1.4",
     "swr": "^2.2.5",
+    "uuid": "^10.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
