--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-i18next": "^14.1.2",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.4",
     "swr": "^2.2.5",
     "uuid": "^10.0.0",
